# design-be-gone

./: .gitignore  .sbgignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dbg/: __init__.py  cli.py  engine.py
dbg/data/: default_manifest.json
tests/: __init__.py  test_engine.py
