[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "design-be-gone"
version = "0.1.0"
description = "Manifest-driven design-standards gate for agentic codebases."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
dbg = "dbg.cli:main"

[tool.setuptools]
packages = ["dbg"]

[tool.setuptools.package-data]
dbg = ["data/*.json"]
